# Xoshiro256PlusSIMD

./: .gitignore  CMakeLists.txt  README.md
UnitTest/: BasicTests.cpp  Benchmark.cpp  CMakeLists.txt  Xoroshiro256PlusReference.h  Xoshiro256PlusReference.h
UnitTestNoAVX/: BenchmarkNoAVX.cpp  CMakeLists.txt
include/: Xoroshiro256Plus.h  Xoshiro256Plus.h
